# Gemini

./: .gitignore  Cargo.toml  config.cfg  test.c
crates/client-bin/: Cargo.toml
crates/client-bin/src/: document.rs  main.rs  window.rs
crates/client-bin/src/gemtext_iced_impl/: mod.rs
crates/client-bin/src/network/: mod.rs  tls_client.rs  tls_config.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: body.rs  error.rs  lib.rs  parser.rs  response.rs
crates/protocol/src/gemini_protocol/: mod.rs  parser.rs  response.rs
crates/protocol/src/gemtext/: gemtext_body.rs  gemtext_parser.rs  mod.rs
crates/server-bin/: Cargo.toml
crates/server-bin/src/: main.rs  tls_store.rs
crates/server-bin/src/config/: error.rs  mod.rs  parser.rs
files/: test.gemini
src/: main.rs
src/network/: tls_config.rs
