[package]
name = "gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "0.23.23", features = ["tls12"] }
webpki-roots = "0.26.8"
protocol = { path = "../protocol" }
env_logger = { version = "0.11.6", features = ["auto-color", "humantime"] }
log = "0.4.25"
url = "2.5.4"
async-std = "1.13.0"
iced = { version = "0.13.1", features = ["advanced"] }