[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["tracing", "net", "io-util", "rt", "macros"] }
wasmtime = "30.0.1"
log = "0.4.25"
env_logger = "0.11.6"
rustls = "0.23.23"
tokio-rustls = "0.26.1"
anyhow = "1.0.96"
rcgen = "0.13.2"
url = { version = "2.5.4", features = [] }
clap = { version = "4.5.31", features = ["derive"] }
